--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,9 @@ form > button {
   width: 100px;
   height: 40px;
   font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .display {
