--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
+body{
+  font-family: 'Open Sans', sans-serif;
+}
+
 .refresh {
   display: flex;
   justify-content: space-between;
@@ -25,7 +31,7 @@ form > button {
 
 ul {
   list-style: none;
-  border: 3px solid black;
+  border: 2px solid black;
   width: 80%;
   padding: 0;
   margin-top: 20px;
@@ -73,4 +79,8 @@ form {
 h1 {
   margin-left: 20px;
   font-size: 70px;
+}
+
+ul li:nth-child(even){
+  background-color: #f2f2f2;
 }
