--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
-body{
+body {
   font-family: 'Open Sans', sans-serif;
+  background-image: url('img/flowers.png');
+  background-repeat: no-repeat;
+  background-size: 100vw 100vh;
+  color: white;
 }
 
 .refresh {
   display: flex;
   justify-content: space-between;
   width: 80%;
+  align-items: center;
 }
 
 form > button {
   height: 50px;
   width: 100px;
   font-size: 20px;
+  border-radius: 5px;
+  color: white;
+  background-color: #05b0ba;
+  border: none;
 }
 
 .refresh > button {
@@ -23,6 +32,18 @@ form > button {
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 5px;
+  color: white;
+  background-color: #05b0ba;
+  border: none;
+}
+
+form > button:hover {
+  background-color: #e70003;
+}
+
+.refresh > button:hover {
+  background-color: #e70003;
 }
 
 .display {
@@ -31,10 +52,10 @@ form > button {
 
 ul {
   list-style: none;
-  border: 2px solid black;
   width: 80%;
   padding: 0;
   margin-top: 20px;
+  border-radius: 5px;
 }
 
 li {
@@ -45,10 +66,21 @@ li {
   padding-left: 5px;
 }
 
+input {
+  transition: transform 0.2s;
+}
+
 form > input {
   height: 50px;
   width: 300px;
   font-size: 20px;
+  border-radius: 5px;
+  padding-left: 5px;
+  border: none;
+}
+
+input:focus {
+  transform: scale(1.1);
 }
 
 .divdisplay {
@@ -81,6 +113,10 @@ h1 {
   font-size: 70px;
 }
 
-ul li:nth-child(even){
-  background-color: #f2f2f2;
+ul li:nth-child(odd) {
+  background-color: #e70003;
+}
+
+ul li:nth-child(even) {
+  background-color: #05b0ba;
 }
